--- a/META.yml
+++ b/META.yml
@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name:                String-BOM
-version:             0.2
+version:             0.3
 abstract:            simple utilities to check for a BOM and strip a BOM
 license:             ~
 author:              
@@ -8,6 +8,7 @@ author:
 generated_by:        ExtUtils::MakeMaker version 6.42
 distribution_type:   module
 requires:     
+    File::Slurp:                   0
     Test::More:                    0
     version:                       0
 meta-spec:
